# MovieRecommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
analyzer/: analyzer.ipynb  analyzer.py
api/: data_api.py
config/: db_setup.py  logging_config.py
database/: database_connection.py
recommender/: recommender.py
scripts/: clean_normalize.py  constraints.py  data_loader.py  permissions.py
tests/: test_integration.py  test_recommender.py
